# simulator

./: .clang-format  .gitignore  .gitmodules  1.txt  2.txt  BSD_REWRITE_PLAN.md  CMakeLists.txt  LOCAL_CORRECTNESS_MASKING_REVIEW.md  LOCAL_HOST_PERF_SUMMARY.md  Makefile  PERF_DEBUG_DECOUPLE_PLAN.md  PR13_POSTMERGE_REVIEW.md  README.md  RISCV.cpp  RISCV.h  RISCV_32A.cpp  RISCV_32A.h  RISCV_32I.cpp  RISCV_32I.h  RISCV_CSR.cpp  RISCV_CSR.h  RISCV_MMU.cpp  RISCV_MMU.h  RISCV_V2C.cpp  RISCV_V2C.h  a.out  b.out  cal_spec.py  changes.patch  compile_commands.json  cvt.h  debug.out_1  debug.out_4  debug.out_6  debug.out_7  get_memory_new.py  log  log.debug  log1  log2  (+19 more)
.claude/: settings.json
MemSubSystem/: DcacheConfig.cpp  MSHR.cpp  MemRouteBlock.cpp  MemSubsystem.cpp  PeripheralAxi.cpp  PtwWalker.cpp  RealDcache.cpp  SimpleCache.cpp  WriteBuffer.cpp
back-end/: BRU.cpp  BackTop.cpp  CSR.cpp  DeadlockDebug.cpp  Dispatch.cpp  EXU.cpp  FTQ.cpp  IDU.cpp  IQ.cpp  IQ.h  ISU.cpp  Idu.cpp  InstructionBuffer.cpp  Isu.cpp  LSU.cpp  PRF.cpp  PTAB.cpp  PhysMemory.cpp  PreIduQueue.cpp  Prf.cpp  ROB.cpp  ROB.h  Ren.cpp  Rename.cpp  Rename.h  Rob.cpp  TOP.cpp  TOP.h  a.out  config.h  util.cpp
baremetal/: .gitignore  .result  common.mk  core.riscv  get_memory.py  get_memory_new.py  link.lds  memory  start.S  test.code  trap.S
bsd/: writebuffer.cpp  writebuffer.h  writebuffer_bsd.cpp  writebuffer_test.cpp
configs/: config_2.h  config_fast.h  default.h  gen_stress_configs.py
data/: 2026.3.29_cache_latency.xlsx
diff/: br_oracle.cpp  branch.cpp  diff.cpp  dut.cpp  enlightenment_v1.cpp  ref.cpp  vp.cpp
doc/: Backend_Code_Comment_Format_Requirement.md  Backend_Documentation_Format_Requirement.md  FPU_Implementations.md  FTQ.md  IO.md  LOG_CONFIG_SIMPLIFICATION_PLAN.md  LOG_PRUNE_CANDIDATES.md  MMIO_INTERRUPT_FLOW.md  PR13_POSTMERGE_REVIEW.md  TMA_profiling.md  backend_cleanup_plan.md  backend_interface_review.md  backend_storage_refactor_plan.md  bpu_tuning_phase_plan.md  config_parameters.md  decouple_arch_exec.md  decoupled_mmu_design.md  iq_storage_refactor_plan.md  legacy_mmu_architecture.md  lsu_dcache_refactor_update.md  new_frontend_integration_plan.md  profile_matrix.md  simple_lsu_read_backpressure_multiport_plan.md  wakeup_matrix.md
front-end/: FIFO_RTL_TEMPLATE_MAPPING.md  FRONTEND_COMB_SEQ_WRITING_STANDARD.md  FrontTop.cpp  Makefile  TARGETED_TRAINING_IO_LARGE_VERIFIED.md  TRAINING_FUNCTION_LIST.md  front_IO.h  front_module.h  front_top.cpp  frontend.h  frontend_stats.cpp  frontend_stats.h  host_profile.cpp  host_profile.h  predecode.cpp  predecode.h  predecode_checker.cpp  predecode_checker.h  train_IO.h  wire_types.h
include/: DeadlockDebug.h  DeadlockReplayTrace.h  DebugPtwTrace.h  DiffMemTrace.h  FrontTop.h  PhysMemory.h  RISCV.h  SimCpu.h  config.h  cvt.h  (+12 more)
(+750 files in other folders)
